<resources>
    <string name="app_name">Menadżer zadań</string>
    <string name="task_list_all_header">Zadania do wykonania</string>
    <string name="amount_unfinished_tasks">Liczba zadań do zrobienia w tym tygodniu</string>
    <string name="task_name_label">Nazwa</string>
    <string name="task_deadline_label">Termin</string>
    <string name="task_progress_label">Postępy (%)</string>
    <string name="task_priority_label">Piorytet</string>
    <string name="new_task_title">NOWE ZADANIE</string>
    <string name="edit_task_title">EDYTUJ ZADANIE</string>
    <string name="estimated_time_label">Szacowany czas (dni)</string>
    <string name="add_task_button">DODAJ</string>
    <string name="invalid_priority_input">Liczba powinna być w przedziale od 1 do 3</string>
    <string name="return_button">Powrót</string>
    <string name="invalid_name_label">Nazwa nie może być dłuższa niż 20 znaków</string>
    <string name="invalid_progress_label">Postep powinien być w przedziale 0-100%</string>
    <string name="invalid_esitmated_time_label">Liczba powinna być większa niż 0 oraz kończyć sie przed deadlinem</string>
    <string name="task_start_date_label">Rozpoczecie</string>
    <string name="edit_task_button">EDYTUJ</string>
    <string name="delete_task_button">Usuń</string>
    <string-array name="priority_levels">
        <item>Wysokie</item>
        <item>Srednie</item>
        <item>Niskie</item>
    </string-array>
    <string-array name="progress_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string name="priority_high">Wysokie</string>
    <string name="priority_medium">Srednie</string>
    <string name="priority_low">Niskie</string>
</resources>